--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,13 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   title: MyString
   description: MyText
   image_url: MyString
   price: 9.99
-
 two:
   title: MyString
   description: MyText
   image_url: MyString
   price: 9.99
+ruby:
+  title: Programming Ruby 1.9
+  description: 
+    Ruby is the fastest growing and most exciting dynamic
+    language out there. If you need to get working programs
+    delivered fast, you should add Ruby to your toolbox.
+  image_url: http://media.pragprog.com/titles/rails4/code/rails40/depot_a/app/assets/images/ruby.jpg
+  price: 49.49
